feat: 설문조사 파이차트 화면 매핑